--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Leader Board</title>
     <!-- stylesheet -->
     <link rel="stylesheet" href="./styles/style.css">
+    <!-- fontawsam -->
+    <script src="https://kit.fontawesome.com/0396d64b7a.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- headre start -->
@@ -109,11 +111,66 @@
                     <div class="course-banner">
                         <img src="./images/courses/course-1.png" alt="">
                     </div>
-                    <div class="coures-info">
+                    <div class="coures-detail">
                         <h3 class="course-title">React- The Complete Guide 2022</h3>
-                        <p class="course-author">
-                            
-                        </p>
+                        <p class="course-author">Reed Krakoff.</p>
+                    </div>
+                    <div class="course-info">
+                        <div>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star empty"></i>
+                            <span>4.5</span>
+                        </div>
+                        <div class="course-duration"><i class="far fa-clock"></i>
+                            01:30hr
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="./images/courses/course-2.png" alt="">
+                    </div>
+                    <div class="coures-detail">
+                        <h3 class="course-title">React- The Complete Guide 2022</h3>
+                        <p class="course-author">Reed Krakoff.</p>
+                    </div>
+                    <div class="course-info">
+                        <div>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star empty"></i>
+                            <span>4.5</span>
+                        </div>
+                        <div class="course-duration"><i class="far fa-clock"></i>
+                            01:30hr
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="./images/courses/course-3.png" alt="">
+                    </div>
+                    <div class="coures-detail">
+                        <h3 class="course-title">React- The Complete Guide 2022</h3>
+                        <p class="course-author">Reed Krakoff.</p>
+                    </div>
+                    <div class="course-info">
+                        <div>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star fill"></i>
+                            <i class="fas fa-star empty"></i>
+                            <span>4.5</span>
+                        </div>
+                        <div class="course-duration"><i class="far fa-clock"></i>
+                            01:30hr
+                        </div>
                     </div>
                 </div>
             </div>
